--- a/_quarto.yml
+++ b/_quarto.yml
@@ -3,18 +3,35 @@ project:
   output-dir: docs
 
 website:
-  title: "NovoRep"
+  title: "Aqui teste"
   navbar:
-    right:
-      - about.qmd
-      - icon: github
-        href: https://github.com/
-      - icon: twitter
-        href: https://twitter.com
+  search: false
+  
+      left:
+      - text: "Início"
+        file: index.qmd
+      right:
+      - text: "Sobre"
+        menu:
+        - text: "Texto 1"
+        - text: "Texto 2"
+        - text: "Texto 3"
+      # - icon: github
+    #     href: https://github.com/
+    #   - icon: twitter
+    #     href: https://twitter.com
+page-layout: custom
 format:
   html:
-    theme: united
+    # grid: 
+    #   sidebar-width: 300px
+    #   body-width: 900px
+    #   margin-width: 300px
+    #   gutter-width: 1.5rem
+    #   
+    theme: custom.scss
     css: styles.css
 
 editor: visual
+
 
